--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   google_fonts: ^4.0.3
   firebase_core: ^2.8.0
+  flutter_screenutil: ^5.7.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -82,13 +84,23 @@ flutter:
     - family: Gloss_And_Bloom
       fonts:
         - asset: fonts/Gloss_And_Bloom.ttf
+ 
+    - family: SignikaNegative-Regular
+      fonts:
+        - asset: fonts/SignikaNegative-Regular.ttf
+    - family: RobotoMono-Regular
+      fonts:
+        - asset: fonts/RobotoMono-Regular.ttf
+    - family: SecularOne-Regular
+      fonts:
+        - asset: fonts/SecularOne-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+      # fonts:
+      #   - asset: fonts/TrajanPro.ttf
+      #   - asset: fonts/TrajanPro_Bold.ttf
+      #     weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
