--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,12 @@ flutter:
     - family: SecularOne-Regular
       fonts:
         - asset: fonts/SecularOne-Regular.ttf
+    - family: SourceSansPro-Italic
+      fonts:
+        - asset: fonts/SourceSansPro-Italic.ttf
+    - family: AbrilFatface-Regular
+      fonts:
+        - asset: fonts/AbrilFatface-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
