--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^4.0.3
   firebase_core: ^2.8.0
   auto_size_text: ^3.0.0
+  cloud_firestore: ^4.6.0
+  firebase_auth: ^4.5.0
 
 dev_dependencies:
   flutter_test:
