--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   auto_size_text: ^3.0.0
   cloud_firestore: ^4.6.0
   firebase_auth: ^4.5.0
+  path_provider_android: ^2.0.27
 
 dev_dependencies:
   flutter_test:
