--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   google_fonts: ^4.0.3
+  google_sign_in: ^6.1.0
   firebase_core: ^2.8.0
   auto_size_text: ^3.0.0
   cloud_firestore: ^4.6.0
