--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider_android: ^2.0.27
   readmore: ^2.2.0
   slide_action: ^0.0.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
