--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   readmore: ^2.2.0
   slide_action: ^0.0.2
   provider: ^6.0.5
+  swipeable_button_view: ^0.0.2
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_test:
