--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   google_fonts: ^4.0.3
   google_sign_in: ^6.1.0
-  firebase_core: ^2.8.0
+  firebase_core: ^2.13.0
   auto_size_text: ^3.0.0
   cloud_firestore: ^4.6.0
   firebase_auth: ^4.5.0
@@ -49,6 +49,7 @@ dependencies:
   swipeable_button_view: ^0.0.2
   page_transition: ^2.0.9
   font_awesome_flutter: ^10.4.0
+  firebase_database: ^10.2.1
 
 dev_dependencies:
   flutter_test:
