--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   firebase_database: ^10.2.1
   flutter_launcher_icons: ^0.13.1
+  fluttericon: ^2.0.0
 
 dev_dependencies:
   flutter_test:
