--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_database: ^10.2.1
   flutter_launcher_icons: ^0.13.1
   fluttericon: ^2.0.0
+  slider_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
