Co-authored-by: Ciobanu Robert Valentino <DaRobij@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/windows/flutter",
+    "cmake.sourceDirectory": "C:/Themis Bistro App/MobileAPP/linux",
     "java.configuration.updateBuildConfiguration": "interactive"
 }
