--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,12 +48,13 @@ dependencies:
   provider: ^6.0.5
   swipeable_button_view: ^0.0.2
   page_transition: ^2.0.9
-  font_awesome_flutter: ^10.4.0
+  font_awesome_flutter: ^10.5.0
   firebase_database: ^10.2.1
   flutter_launcher_icons: ^0.13.1
   fluttericon: ^2.0.0
   slider_button: ^2.0.0
   qr_flutter: ^4.1.0
+  badges: ^3.1.1
 
 dev_dependencies:
   flutter_test:
