--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   slider_button: ^2.0.0
   qr_flutter: ^4.1.0
   badges: ^3.1.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
