login message error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "cmake.sourceDirectory": "C:/Themis Bistro App/MobileAPP/linux",
+    "cmake.sourceDirectory": "C:/flutter projects/MobileAPP/linux",
     "java.configuration.updateBuildConfiguration": "interactive"
 }
