--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   qr_flutter: ^4.1.0
   badges: ^3.1.1
   intl: ^0.18.1
+  awesome_dialog: ^3.1.0
 
 dev_dependencies:
   flutter_test:
