--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.539042013250-jj22m64jp2br3m2q6pjh99i0miurb366</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCEFT24ebGNZVT1qjgizN1POaONXq6R7Ms</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>539042013250</string>
 	<key>PLIST_VERSION</key>
